TEST_PROGRAMS/VALID/dongkyu_kim/correct1.min
# correct 1

var x: int;
var y: int;

x = 10;
y = 1;

while x do
    y = y * x;
    x = x - 1;
done

print x;

