TEST_PROGRAMS/INVALID/david_zhou/invalid4.min
# misplaced semicolon

while 1 do
  print "1";
done;;;;
